--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -2,386 +2,6 @@
 // SECTION STYLES
 // --------------------------------------------------------------------------
 
-// section.welcome {
-//   position: relative;
-//   min-height: 950px;
-//   display: flex;
-//   align-items: center;
-//   overflow: hidden;
-  
-
-//   .img {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     right: 0;
-//     bottom: 0;
-//     display: flex;
-//     // max-width: 1400px;
-//     margin: 0 auto;
-
-//     align-items: center;
-//     justify-content: center;
-
-//     picture {
-//       width: 100%;
-//       height: 100%;
-//       img {
-//         object-fit: cover;
-//         object-position: center;
-//         height: 100%;
-//         width: 100%;
-//         // @media screen and (max-width: 1240px) {
-//         //   opacity: 0.3;
-//         // }
-//         // @media screen and (max-width: 992px) {
-//         //   opacity: 0.3;
-//         // }
-        
-
-//         animation-name: kenburns;
-//         animation-timing-function: linear;
-//         animation-iteration-count: infinite;
-//         animation-duration: 65s;
-//         opacity: 1;
-//         transform: scale(1.2);
-//       }
-
-//       @keyframes kenburns {
-//         0% {
-//           opacity: 1;
-//           transform: scale(1);
-//         }
-    
-//         5% {
-//           opacity: 1;
-//         }
-    
-//         23% {
-//           opacity: 1;
-//         }
-    
-    
-//         26% {
-//           opacity: 1;
-//           transform: scale(1.2);
-//         }
-    
-//         100% {
-//           opacity: 1;
-//           transform: scale(1);
-//         }
-//       }
-   
-//     }
-
-
-//   }
-
-//   .container {
-//     position: relative;
-//     z-index: 2;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-
-//     .content {
-//       max-width: 550px;
-//       width: 100%;
-      
-//       @media screen and (max-width: 992px) {
-//         padding-bottom: 60px;
-//       }
-
-//       img {
-//         padding: 250px 0 50px;
-//       }
-
-//       p {
-//         color: $f;
-//         font-weight: 500;
-//         text-align: center;
-//         text-transform: uppercase;
-//         // letter-spacing: 2px;
-//       }
-//     }
-//   }
-
-//   .arrow-btn {
-//     position: absolute;
-//     bottom: 30px;
-//     // margin-right: -20px;
-//     right: 50%;
-
-//     a {
-      
-//       &:hover {
-//         opacity: 0.5;
-//       }
-
-//       &::before {
-//         display: none;
-//       }
-//     }
-//   }
-
-
-//   .hero-social {
-//     position: absolute;
-//     right: 30px;
-//     bottom: 50px;
-//     z-index: 2;
-//     display: flex;
-//     flex-direction: column;
-//     display: none;
-
-//     @include isMedium {
-//       display: flex;
-//     }
-
-//     .social-link {
-//       margin: 15px 0;
-
-//       &::before {
-//         display: none;
-//       }
-      
-//       &:hover {
-//         opacity: 0.5;
-//       }
-//     }
-//   }
-// }
-
-// section.welcome {
-//   position: relative;
-//   min-height: 950px;
-//   display: flex;
-//   align-items: center;
-//   // margin-top: 100px;
-
-//   @media screen and (max-width: 992px) {
-
-//   }
-  
-//   .img {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     right: 0;
-//     bottom: 0;
-//     display: flex;
-//     margin: 0 auto;
-//     align-items: center;
-//     justify-content: center;
-
-//     .swiper-container {
-//       width: 100%;
-//       height: 100%;
-//     }
-
-//     .swiper-slide {
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-
-
-      
-
-
-//     }
-
-
-//     picture {
-//       width: 100%;
-//       height: 100%;
-//       img {
-//         object-fit: cover;
-//         object-position: center;
-//         height: 100%;
-//         width: 100%;
-//         // @media screen and (max-width: 1240px) {
-//         //   opacity: 0.3;
-//         // }
-//         // @media screen and (max-width: 700px) {
-//         //   opacity: 0.3;
-//         //   object-position: right;
-//         // }
-//       }
-//     }
-
-//     .swiper-pagination{
-//       position: absolute;
-//       position: absolute;
-//       left: 10px;
-//       display: flex;
-//       flex-direction: column;
-//       width: 55px;
-//       height: 155px;
-//       align-items: center;
-
-
-//       @media screen and (max-width: 600px) {
-//         left: -12px;
-//       }
-//     }
-
-//     .swiper-pagination-bullet{
-//       height: 10px;
-//       width: 100px;
-//       border-radius: 1px;
-//       background: transparent;
-//       height: 18px;
-//       width: 18px;
-//       border-radius: 50%;
-//       border: 2px solid $color-secondary; 
-//       opacity: 1;
-//       margin: 10px 0;
-//     }
-
-//     .swiper-pagination-bullet-active {
-//       background: $color-secondary;
-//     }
-
-//     .swiper-button-next, .swiper-button-prev{
-//       opacity: 0.7;
-//       color: $color-secondary;
-//       transition: all 0.3s ease;
-      
-//     }
-//     .swiper-button-next:hover, .swiper-button-prev:hover{
-//       opacity: 1;
-//       color: $color-secondary;
-//     }
-
-
-//   }
-
-//   .container {
-//     position: absolute;
-//     z-index: 2;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     top: 47%;
-  
-
-//     .content {
-//       max-width: 650px;
-//       width: 100%;
-      
-//       @media screen and (max-width: 992px) {
-//         padding-bottom: 60px;
-//       }
-
-//       img {
-//         // padding: 250px 0 50px;
-//       }
-
-//       .text-col {
-//         margin-top: 135px;
-
-//         p {
-//           color: $f;
-//           font-weight: 500;
-//           text-align: center;
-//           text-transform: uppercase;
-//         }
-//       }
-
-//     }
-//   }
-
-//   .next-slide-container {
-//     position: absolute;
-//     z-index: 2;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: flex-start;
-//     top: 35%;
-//     width: 100%;
-//     padding: 0 50px;
-//     z-index: 2;
-  
-
-//     .content {
-//       width: 55%;
-//       height: 500px;
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
-
-
-//         p {
-//           text-align: center;
-//         }
-
-//         h1 {
-//           margin: 0;
-//           text-align: center;
-//         }
-
-//         .btn-container {
-//           margin-top: 30px;
-//         }
-    
-
-//     }
-//   }
-
-
-
-//   .arrow-btn {
-//     position: absolute;
-//     bottom: 30px;
-//     // margin-right: -20px;
-//     right: 50%;
-//     z-index: 1;
-
-//     a {
-      
-//       &:hover {
-//         opacity: 0.5;
-//       }
-
-//       &::before {
-//         display: none;
-//       }
-//     }
-//   }
-
-
-//   .hero-social {
-//     position: absolute;
-//     right: 30px;
-//     bottom: 50px;
-//     z-index: 2;
-//     display: flex;
-//     flex-direction: column;
-//     display: none;
-
-//     @include isMedium {
-//       display: flex;
-//     }
-
-//     .social-link {
-//       margin: 15px 0;
-
-//       &::before {
-//         display: none;
-//       }
-      
-//       &:hover {
-//         opacity: 0.5;
-//       }
-//     }
-//   }
-// }
-
-
 section.welcome {
   position: relative;
   min-height: 100vh;
@@ -439,15 +59,12 @@ section.welcome {
 
                   img {
                     object-fit: cover;
+                    object-position: center;
                     height: 100%;
                     width: 100%;
-                    // @media screen and (max-width: 1240px) {
-                    //   opacity: 0.3;
-                    // }
 
                   }
                 }
-
 
             }
 
@@ -466,8 +83,8 @@ section.welcome {
                     
                     @media screen and (max-width: 992px) {
                       opacity: 0.3;
-                      object-fit: right;
-                    } 
+                      object-position: 75%;
+                    }
                   }
                 } 
 
@@ -644,7 +261,6 @@ section.welcome {
     }
   }
 }
-
 
 
 section.sculptsure {
